# finance-analyzer

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
app/: logger.py  main.py
app/dtos/: dto_news.py
app/entrypoints/: router_news.py
app/services/gpt/: service.py
app/services/gpt/secrets/: README.md
app/services/slack/channels/agriculture_news/: service.py
app/services/slack/secrets/: README.md
app/utils/: util_path.py
finance/: async_requests.py  decorators.py  logger.py  main.py  models.py  patterns.py
finance/api/: router.py
finance/tasks/reddit/: constants.py  logger.py  task.py
scripts/: run.sh
spring/: logger.py  main.py
spring/entrypoints/v1/: routes.py
spring/entrypoints/v1/gpt/: endpoints.py  models.py  service.py
