[tool.poetry]
name = "slackchannels"
version = "0.1.0"
description = ""
authors = ["Ryu0n <hsung951027@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.3.8"
slack-sdk = "^3.26.1"
fastapi = "^0.104.1"
pydantic = "^2.5.2"
gunicorn = "^21.2.0"
uvicorn = "^0.24.0.post1"
redis = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
