[project]
name = "finance-analyzer"
version = "0.1.0"
description = ""
authors = [
    {name = "Ryu0n",email = "hsung951027@gmail.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.10"
dependencies = [
    "fastapi (>=0.115.7,<0.116.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "aiohttp (>=3.11.11,<4.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pytz (>=2024.2,<2025.0)",
    "langchain (>=0.3.15,<0.4.0)",
    "langchain-community (>=0.3.15,<0.4.0)",
    "langchain-huggingface (>=0.1.2,<0.2.0)",
    "huggingface-hub (>=0.27.1,<0.28.0)",
    "transformers (>=4.48.1,<5.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
